feat: update access token generation logic in SpotifyAdapter
