# shared/models/common.ts
@@ -1,7 +1,15 @@
 import { PlayList } from 'src/domain/playlist.entity'
 
 export interface IStreaming {
-  getAccessToken(): Promise<string>
+  generateAccessToken(): Promise<string>
   getUserPlaylists(user_id: string): Promise<PlayList[]>
   createPlaylist(playlist: PlayList): Promise<void>
+}
+
+export type AccessTokenResponseDTO = {
+  data: {
+    access_token: string
+    toke_type: string
+    expires_in: number
+  }
 }
