# shared/tsp-output/@typespec/openapi3/openapi.json
@@ -15,24 +15,16 @@
   "paths": {
     "/streaming": {
       "post": {
-        "operationId": "StreamingController_getAccessToken",
-        "summary": "Get access token for a streaming service",
+        "operationId": "StreamingController_generateAccessToken",
+        "summary": "Generate access token for a streaming service",
         "parameters": [],
         "responses": {
           "200": {
             "description": "The request has succeeded.",
             "content": {
-              "application/json": {
+              "text/plain": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "access_token": {
-                      "type": "string"
-                    }
-                  },
-                  "required": [
-                    "access_token"
-                  ]
+                  "type": "string"
                 }
               }
             }
